<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppDory</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">LOGOUT</string>
    <string name="login">LOGIN</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_vk_login">VkLoginActivity</string>
    <string name="drawer_userpic_descritption">User picture</string>
    <string name="login_login_done">Go</string>
    <string name="login_tiitle">Choose where you listen your music</string>
    <string name="login_vk_description">Login with VK</string>
    <string name="concerts_buy_description">Buy a ticket</string>
    <string name="concert_calendar_description">Add event to calendar</string>
    <string name="artist">Artist</string>
    <string name="song_count">Number of songs</string>
    <string name="syncing">Syncing</string>
    <string name="concert_page">Dory Band</string>
    <string name="title_activity_region_selector">RegionSelectorActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>